# Mini-Solar-System-Visualization

./: .gitmodules  CMakeLists.txt
include/: camera.h  shader.h  sphere.h  texture.h
shaders/: orbit.frag  orbit.vert  planet.frag  planet.vert  sun.frag  sun.vert
src/: camera.cpp  main.cpp  shader.cpp  sphere.cpp
